--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-googleads",
   "version": "0.1.0",
-  "description": "",
+  "description": "google ads advanced",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "wengo",
+    "email": "wengooooo@aol.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/wengooooo/n8n-nodes-googleads.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -36,14 +36,16 @@
       "dist/credentials/GoogleAdsAdvancedApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/GoogleAdsAdvanced/HttpBin.node.js"
+      "dist/nodes/GoogleAdsAdvanced/GoogleAdsAdvanced.node.js"
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@typescript-eslint/parser": "~8.32.0",
     "eslint": "^8.57.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
     "gulp": "^5.0.0",
+    "n8n-workflow": "*",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
